<!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">LiveData sample</string>
    <string name="label1">Time generated from liveData builder:</string>
    <string name="label2">Result of the transformation:</string>
    <string name="label3">Emit + emitSource pattern</string>
    <string name="label4">Cache + Remote data source</string>
    <string name="refresh_label">Fetch new data2</string>
    <string name="button_xml">Button</string>
</resources>
